--- a/people/oscar.qmd
+++ b/people/oscar.qmd
@@ -4,7 +4,7 @@ description: "Senior Lecturer"
 image: ../images/oscar.jpeg
 ---
 
-[![](../images/oscar.jpeg) Oscar convenes the dissertation course [HDAT9500](../courses.html#HDAT9500-Machine-Learning-I).<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:o.perezconcha@unsw.edu.au">o.perezconcha@unsw.edu.au</a>]{.aside}
+[![](../images/oscar.jpeg) Oscar convenes the machine learning courses [HDAT9500](../courses.html#HDAT9500-Machine-Learning-I) and  [HDAT9510](../courses.html#HDAT9510-Machine-Learning-I).<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:o.perezconcha@unsw.edu.au">o.perezconcha@unsw.edu.au</a>]{.aside}
 
  
 ## What publication are you most proud of?
