configured CNAME file and updated default image size

--- a/people.qmd
+++ b/people.qmd
@@ -2,7 +2,8 @@
 title: Meet the teaching team
 listing:
   type: grid
-  grid-columns: 4
+  grid-columns: 3
+  image-height: 250px
   categories: false
   contents:
     - "people/*.qmd"
