--- a/posts.qmd
+++ b/posts.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Health Data Science Student Blog"
+comments: false
 listing: 
   contents: posts # all Quarto docs in the `posts` directory will be included on your listing page
   type: default # or `default` or `table`; each type has its own set of yaml options to include
