--- a/people/and.qmd
+++ b/people/and.qmd
@@ -2,6 +2,7 @@
 title: "Andrew Blance"
 description: "Senior Lecturer"
 image: ../images/andy.jpeg
+comments: false
 ---
 
 [![](../images/andy.jpeg) <a href="mailto:a.blance@unsw.edu.au">a.blance@unsw.edu.au</a>]{.aside}
