--- a/people/blanca.qmd
+++ b/people/blanca.qmd
@@ -2,10 +2,49 @@
 title: "Blanca Gallego Luxan"
 description: "Associate Professor"
 image: ../images/blanca.jpeg
+comments: false
 ---
 
-[![](../images/blanca.jpeg) <a href="mailto:b.gallego@unsw.edu.au">b.gallego@unsw.edu.au</a>]{.aside}
+::: {.aside}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla facilisi etiam dignissim diam quis enim lobortis. Libero enim sed faucibus turpis in eu mi bibendum. Odio ut enim blandit volutpat. Posuere ac ut consequat semper viverra nam libero justo laoreet. Scelerisque in dictum non consectetur. Dolor sit amet consectetur adipiscing elit ut. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Odio aenean sed adipiscing diam donec adipiscing. Eu lobortis elementum nibh tellus molestie nunc non blandit.
+::: {.profilepic}
+![](../images/blanca.jpeg) 
+:::
 
-Velit egestas dui id ornare. Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi tristique. Mauris pharetra et ultrices neque. Mus mauris vitae ultricies leo integer malesuada nunc. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Donec pretium vulputate sapien nec. At varius vel pharetra vel turpis nunc eget lorem. Pretium quam vulputate dignissim suspendisse. Lacinia at quis risus sed vulputate odio. Fusce id velit ut tortor pretium viverra. Diam ut venenatis tellus in metus vulputate eu. Ultricies mi eget mauris pharetra. Interdum consectetur libero id faucibus nisl tincidunt. Mollis nunc sed id semper risus in hendrerit gravida rutrum.
+Blanca convenes the Clinical AI course [HDAT9900](../courses.html#hdat9000-clinical-artificial-intelligence).<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:b.gallego@unsw.edu.au">b.gallego@unsw.edu.au</a>
+
+::: 
+ 
+## What publication are you most proud of?
+
+These are three studies I am proud of:
+ 
+During my PhD, I developed a model that predicted that the ocean surface currents in the North Atlantic and North Pacific are synchronized on decadal time scales (see [Journal of Climate](https://doi.org/10.1175/1520-0442(2001)014<2815:DVOTOA>2.0.CO;2)[^1]). Twenty years later, climate scientists from Japan, analysed decades of satellite data to prove that my prediction was correct and that this coupling can help to explain climate events such as the abnormally hot Northern Hemisphere summer of 2018 (see [Science](https://www.science.org/doi/10.1126/science.abh3295)[^2]).
+ 
+As a postdoc, while doing research in environmental economics, I formulated a way for allocating responsibility for production impacts consistently amongst all agents throughout demand and supply chains, in a way that reflects their contribution to the production process (see [Economic Systems Research](https://doi.org/10.1080/09535310500283492)[^3]). This formulation is now in used in environmental accounting software (see [Green is good for business](https://www.yorkpress.co.uk/business/news/1304652.green-is-good-for-business/).
+
+On the topic of predictive algorithms in Medicine, I led the first non-disease-specific model that dynamically and simultaneously predicted the future daily probability of remaining days of hospitalization, death, and readmission (see [Journal of the American Medical Informatics Association](https://doi.org/10.1093/jamia/ocv110))[^4]. This model allowed for the real-time identification of patient trajectories forecasting expected discharge, expected continuing hospitalization, and expected death. It was featured in the 2016 edition of [Stories of Australian Science](https://stories.scienceinpublic.com.au/2016/predictivemodelling/).
+
+
+[^1]: Gallego B, Cessi P. Decadal variability of two oceans and an atmosphere. Journal of Climate. 2001 Jul 1;14(13):2815-32. [https://doi.org/10.1175/1520-0442(2001)014<2815:DVOTOA>2.0.CO;2](https://doi.org/10.1175/1520-0442(2001)014<2815:DVOTOA>2.0.CO;2) 
+
+[^2]: Kohyama T, Yamagami Y, Miura H, Kido S, Tatebe H, Watanabe M. The Gulf Stream and Kuroshio current are synchronized. Science. 2021 Oct 15;374(6565):341-6. [https://www.science.org/doi/10.1126/science.abh3295](https://www.science.org/doi/10.1126/science.abh3295)
+
+[^3]: Gallego B, Lenzen M. A consistent input–output formulation of shared producer and consumer responsibility. Economic Systems Research. 2005 Dec 1;17(4):365-91. [https://doi.org/10.1080/09535310500283492](https://doi.org/10.1080/09535310500283492)
+
+[^4]: Cai X, Perez-Concha O, Coiera E, Martin-Sanchez F, Day R, Roffe D, Gallego B. Real-time prediction of mortality, readmission, and length of stay using electronic health record data. Journal of the American Medical Informatics Association. 2016 May;23(3):553-61. [https://doi.org/10.1093/jamia/ocv110](https://doi.org/10.1093/jamia/ocv110) 
+
+## What’s the most important take home message from your course?
+
+Measures of the predictive performance of an AI algorithm do not incorporate clinical consequences. Further research is required to measure whether a technology can lead to more efficient healthcare systems and better patient outcomes.
+
+Any clinical AI technology must be **feasible** (technically, financially, and legally) and **desirable** (safe, effective, cost-saving and targeting the right problem and the right time).
+ 
+## If you could go back in time, what bit of advice would you give to yourself as a student?
+
+If you are doing course work: Focus on understanding the concepts since the technology keeps on changing. If you are doing research: Understand the boundaries of knowledge and practice, aim high, and enjoy the journey.
+
+
+## Who would play you in the biopic of your life?
+
+I am not sure my life would make for a particularly interesting film.
