--- a/people/oscar.qmd
+++ b/people/oscar.qmd
@@ -2,9 +2,18 @@
 title: "Oscar Perez Concha"
 description: "Senior Lecturer"
 image: ../images/oscar.jpeg
+comments: false
 ---
 
-[![](../images/oscar.jpeg) Oscar convenes the machine learning courses [HDAT9500](../courses.html#HDAT9500-Machine-Learning-I) and  [HDAT9510](../courses.html#HDAT9510-Machine-Learning-I).<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:o.perezconcha@unsw.edu.au">o.perezconcha@unsw.edu.au</a>]{.aside}
+::: {.aside}
+
+::: {.profilepic}
+![](../images/oscar.jpeg) 
+:::
+
+Oscar convenes the machine learning courses [HDAT9500](../courses.html#HDAT9500-Machine-Learning-I) and  [HDAT9510](../courses.html#HDAT9510-Machine-Learning-I).<br><br> {{< fa envelope title="An envelope" >}} <a href="mailto:o.perezconcha@unsw.edu.au">o.perezconcha@unsw.edu.au</a>
+
+::: 
 
  
 ## What publication are you most proud of?
